--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -1,10 +1,8 @@
 {% extends 'base/base.html' %}
 
+{% block title %} <title> Nub Shop | About </title>{% endblock title %}
+
 
 {% block content %}
-<div class="list-group">
-    <button type="button" class="list-group-item list-group-item-action active">Active item</button>
-    <button type="button" class="list-group-item list-group-item-action">Item</button>
-    <button type="button" class="list-group-item list-group-item-action disabled">Disabled item</button>
-</div>
+
 {% endblock content %}
