--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block title %}
-<title>Nub Shop | Cart </title>
+<title>Belle Shop | Cart </title>
   
 {% endblock title %}
 
