--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% block title %} <title> Nub Shop | About </title>{% endblock title %}
+{% block title %} <title> Belle Shop | About </title>{% endblock title %}
 
 
 {% block content %}
