--- a/templates/home/product_detaits.html
+++ b/templates/home/product_detaits.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block title %}
- <title>Nub Shop | Product Details </title>
+ <title>Belle Shop | Product Details </title>
 {% endblock title %}
 
 
@@ -302,37 +302,7 @@
 
                         </div>
                         <!--Product Feature-->
-                        <div class="prFeatures">
-                            <div class="row">
-                                <div class="col-12 col-sm-12 col-md-12 col-lg-6 feature">
-                                    <img src="/static/images/credit-card.png" alt="Safe Payment" title="Safe Payment" />
-                                    <div class="details">
-                                        <h3>Safe Payment</h3>Pay with the world's most payment methods.
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-12 col-md-12 col-lg-6 feature">
-                                    <img src="/static/images/shield.png" alt="Confidence" title="Confidence" />
-                                    <div class="details">
-                                        <h3>Confidence</h3>Protection covers your purchase and personal data.
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-12 col-md-12 col-lg-6 feature">
-                                    <img src="/static/images/worldwide.png" alt="Worldwide Delivery"
-                                        title="Worldwide Delivery" />
-                                    <div class="details">
-                                        <h3>Worldwide Delivery</h3>FREE &amp; fast shipping to over 200+ countries &amp;
-                                        regions.
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-12 col-md-12 col-lg-6 feature">
-                                    <img src="/static/images/phone-call.png" alt="Hotline" title="Hotline" />
-                                    <div class="details">
-                                        <h3>Hotline</h3>Talk to help line for your question on 4141 456 789, 4125 666
-                                        888
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                   
                         <!--End Product Feature-->
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12">
@@ -398,47 +368,7 @@
                                        cart</button>
                                </form>
                             </div>
-                            <div class="display-table shareRow">
-                                <div class="display-table-cell medium-up--one-third">
-                                    <div class="wishlist-btn">
-                                        <a class="wishlist add-to-wishlist" href="#" title="Add to Wishlist"><i
-                                                class="icon anm anm-heart-l" aria-hidden="true"></i> <span>Add to
-                                                Wishlist</span></a>
-                                    </div>
-                                </div>
-                                <div class="display-table-cell text-right">
-                                    <div class="social-sharing">
-                                        <a target="_blank" href="#"
-                                            class="btn btn--small btn--secondary btn--share share-facebook"
-                                            title="Share on Facebook">
-                                            <i class="fa fa-facebook-square" aria-hidden="true"></i> <span
-                                                class="share-title" aria-hidden="true">Share</span>
-                                        </a>
-                                        <a target="_blank" href="#"
-                                            class="btn btn--small btn--secondary btn--share share-twitter"
-                                            title="Tweet on Twitter">
-                                            <i class="fa fa-twitter" aria-hidden="true"></i> <span class="share-title"
-                                                aria-hidden="true">Tweet</span>
-                                        </a>
-                                        <a href="#" title="Share on google+"
-                                            class="btn btn--small btn--secondary btn--share">
-                                            <i class="fa fa-google-plus" aria-hidden="true"></i> <span
-                                                class="share-title" aria-hidden="true">Google+</span>
-                                        </a>
-                                        <a target="_blank" href="#"
-                                            class="btn btn--small btn--secondary btn--share share-pinterest"
-                                            title="Pin on Pinterest">
-                                            <i class="fa fa-pinterest" aria-hidden="true"></i> <span class="share-title"
-                                                aria-hidden="true">Pin it</span>
-                                        </a>
-                                        <a href="#" class="btn btn--small btn--secondary btn--share share-pinterest"
-                                            title="Share by Email" target="_blank">
-                                            <i class="fa fa-envelope" aria-hidden="true"></i> <span class="share-title"
-                                                aria-hidden="true">Email</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
+                            
                         </div>
                         <!--Product Tabs-->
                         <div class="tabs-listing">
@@ -452,46 +382,12 @@
                                             make a type specimen book. It has survived not only five centuries, but also
                                             the leap into electronic typesetting, remaining essentially unchanged.</p>
                                         <ul>
-                                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                            <li>Specifications of Stylish Jersey t shirt for Men Comfortable and soft wear
+                                                BrandNo BrandSKU215149406_BD-1163764080Main MaterialMesh</li>
                                             <li>Sed ut perspiciatis unde omnis iste natus error sit</li>
-                                            <li>Neque porro quisquam est qui dolorem ipsum quia dolor</li>
-                                            <li>Lorem Ipsum is not simply random text.</li>
-                                            <li>Free theme updates</li>
+                                            
                                         </ul>
-                                        <h3>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</h3>
-                                        <p>You can change the position of any sections such as slider, banner, products,
-                                            collection and so on by just dragging and dropping.&nbsp;</p>
-                                        <h3>Lorem Ipsum is not simply random text.</h3>
-                                        <p>But I must explain to you how all this mistaken idea of denouncing pleasure
-                                            and praising pain was born and I will give you a complete account of the
-                                            system, and expound the actual teachings of the great explorer of the truth,
-                                            the master-builder of human happiness.</p>
-                                        <p>Change colors, fonts, banners, megamenus and more. Preview changes are live
-                                            before saving them.</p>
-                                        <h3>1914 translation by H. Rackham</h3>
-                                        <p>But I must explain to you how all this mistaken idea of denouncing pleasure
-                                            and praising pain was born and I will give you a complete account of the
-                                            system, and expound the actual teachings of the great explorer of the truth,
-                                            the master-builder of human happiness.</p>
-                                        <h3>Section 1.10.33 of "de Finibus Bonorum et Malorum", written by Cicero in 45
-                                            BC</h3>
-                                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                                            praesentium voluptatum deleniti atque corrupti quos dolores et quas
-                                            molestias excepturi sint occaecati cupiditate non provident, similique sunt
-                                            in culpa qui officia deserunt mollitia animi, id est laborum et dolorum
-                                            fuga.</p>
-                                        <h3>The standard Lorem Ipsum passage, used since the 1500s</h3>
-                                        <p>You can use variant style from colors, images or variant images. Also
-                                            available differnt type of design styles and size.</p>
-                                        <h3>Lorem Ipsum is not simply random text.</h3>
-                                        <p>But I must explain to you how all this mistaken idea of denouncing pleasure
-                                            and praising pain was born and I will give you a complete account of the
-                                            system, and expound the actual teachings of the great explorer of the truth,
-                                            the master-builder of human happiness.</p>
-                                        <h3>Proin ut lacus eget elit molestie posuere.</h3>
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                            Lorem Ipsum has been the industry's standard dummy text ever since the
-                                            1500s, when an unknown printer took a galley of type and scrambled.</p>
+                                       
                                     </div>
                                 </div>
                                 <h3 class="acor-ttl" rel="tab2">Product Reviews</h3>
