--- a/templates/home/shop-left-sidebar.html
+++ b/templates/home/shop-left-sidebar.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 
 {% block title %}
-<title>Nub Shop | Trending </title>
+<title>Belle Shop | Trending </title>
   
 {% endblock title %}
 
