--- a/templates/home/trending.html
+++ b/templates/home/trending.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
  
-
+{% block title %} <title>Belle Shop | Trending</title> {% endblock title %}
 
 
 {% block content %}
