--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -124,7 +124,7 @@
                     <!--Mobile Logo-->
                     <div class="col-6 col-sm-6 col-md-6 col-lg-2 d-block d-lg-none mobile-logo">
                         <div class="logo">
-                            <a href="index.html">
+                            <a href="/">
                                 <img src="/static/images/logo.svg" alt="Belle Multipurpose Html Template"
                                     title="Belle Multipurpose Html Template" />
                             </a>
