--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -1,8 +1,6 @@
 {% extends 'base/base.html' %}
- 
 
-
-
+{% block title %} <title>Belle Shop | Checkout</title> {% endblock title %}
 {% block content %}
 <div class="container mt-2">
  <div class="row">
@@ -20,7 +18,7 @@
                 <div class="alert alert-danger" role="alert"><h3>Invaild information</h3></div>
                 {% endif %}
                 <h2 class="bg-info p-4 border rounded text-center"> <small>Checkout</h2>
-                <form action="" method="post">
+                <form action="{% url 'orderconf' %}" method="post">
                     {% csrf_token %}
                     <input type="text" name="uid"  value="{{user.id}}" hidden ><br>
                     <input type="text" name="pid" value="{{items.pid}}" hidden><br>
