--- a/templates/author/signup.html
+++ b/templates/author/signup.html
@@ -33,7 +33,7 @@
 
                 <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control form-control-sm" name="email" placeholder="Enter Valid Email"  id="exampleInputEmail1" >
+                <input type="email" class="form-control form-control-sm" name="email" placeholder="Enter Valid Email" required  id="exampleInputEmail1" >
                 </div>
 
                 <div class="mb-3">
