--- a/templates/checkout/orderconf.html
+++ b/templates/checkout/orderconf.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container">
-    <h1 class="pt-3 text-center"> Congratulations !  </h1><br>
+    <h1 class="pt-3 text-center"> Congratulations ! <b>{{user}}</b>  </h1> <br>
     <h1 class="pt-3 text-center">Thanks For Your Order</h1>
 </div>
 
