--- a/templates/home/product_detaits.html
+++ b/templates/home/product_detaits.html
@@ -361,6 +361,7 @@
                                    <button type="submit" name="addtocart" value="5" class="btn btn-info">Add to
                                        cart</button>
                                </form>
+                               <h1>Cash on delivery</h1>
                             </div>
                             
                         </div>
