--- a/templates/author/login.html
+++ b/templates/author/login.html
@@ -26,6 +26,9 @@
 
                 <input type="submit" class="btn btn-info" value="Login">    
             </form>
+            <hr>
+            <p>If you don't have account</p>
+            <a href="{% url 'signup'%}"><button type="submit" name="submit" class="btn btn-info">Create An Account</button></a> 
         </div>
     </div>
 <div>
