--- a/templates/author/signup.html
+++ b/templates/author/signup.html
@@ -47,7 +47,11 @@
                     </div>
 
                 <button type="submit" name="submit" class="btn btn-info">Create An Account</button>
+                
             </form>
+            <hr>
+            <p>If you have account</p>
+            <a href="{% url 'signin'%}"><button type="submit" name="submit" class="btn btn-info">Login</button></a>
         </div>
     </div>
 <div>
