--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -112,7 +112,7 @@
                                             class="anm anm-angle-down-l"></i></a>
                                 </li>
 
-                                <li class="lvl1"><a href="#"><b>Buy Now!</b> <i class="anm anm-angle-down-l"></i></a>
+                                {% comment %} <li class="lvl1"><a href="#"><b>Buy Now!</b> <i class="anm anm-angle-down-l"></i></a> {% endcomment %}
                                 </li>
                             </ul>
                         </nav>
